# BabelLib

./: .gitignore  CMakeLists.txt  README.md  babel.hpp  loremipsum.txt  main.cpp  main.su  tester.hpp
.github/workflows/: build.yml
babLib/: algorithm.hpp  any.hpp  char.hpp  file_system.hpp  math.hpp  must_have.hpp  optional.hpp  system.hpp  text.hpp  time.hpp  typdef.hpp  variadic.hpp  wraper.hpp
babLib/algorithm/: algorithm.hpp  cast.hpp  math.hpp  sha256.hpp  string.hpp  vector.hpp
babLib/char/: char.hpp  const_char.hpp
babLib/concepts/: concepts.hpp
babLib/container/: container.hpp  dynamic_array.hpp  list.hpp  ring_buffer.hpp
babLib/graphics/: cmyk.hpp  convert.hpp  rgb.hpp
babLib/iterators/: enumerate.hpp  generator.hpp  iterator.hpp  range.hpp  read.hpp  write.hpp
babLib/matrix/: matrix.hpp  operator_on_matrix.hpp
babLib/request/: request.hpp
babLib/system/: linux.hpp  system.hpp
babLib/tokens/: token.hpp  tokenization.hpp
babLib/windows/: windows.hpp  windowsConv.hpp
tests/: tester.hpp
tests/algorithm/algorithm/: algorithm.hpp
tests/algorithm/math/: math.hpp
tests/any/: pol_any.hpp  void_any.hpp
tests/char/char/: char.hpp
tests/char/const_char/: const_char.hpp
tests/concepts/concepts/: concepts.hpp
tests/container/dynamic_array/: dynamic_array.hpp
tests/container/list/: list.hpp
tests/file_system/: file_system.hpp
tests/iterators/range/: range.hpp
tests/optional/: optional.hpp
tests/text/: text.hpp
tests/time/: time.hpp
tests/tokens/: tokens.hpp
tests/variadic/: variadic.hpp
tests/wrapper/: wrapper.hpp
(+13 files in other folders)
